plugins {
    id 'maven-publish'
    id 'java'
}

repositories {
    mavenCentral()
    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
    mavenLocal()
}

group = 'com.gocypher'
archivesBaseName = 'cybench-t2b-annotations'
version = '1.0'
sourceCompatibility = 1.8
targetCompatibility = 1.8

configurations {
    t2b
    cybench
}

// https://docs.gradle.org/current/userguide/tutorial_java_projects.html
// https://mvnrepository.com/

dependencies {
    compile 'com.google.auto.service:auto-service:1.0'
    compile 'com.github.javaparser:javaparser-symbol-solver-core:3.22.1'
    compile 'org.openjdk.jmh:jmh-core:1.32'
    compile 'org.openjdk.jmh:jmh-generator-annprocess:1.32'
    compile 'org.testng:testng:7.4.0'
    compile 'junit:junit:4.13.2'
    compile 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    compile files("${System.properties['java.home']}/../lib/tools.jar")
    testCompile 'org.testng:testng:7.4.0'
    testCompile 'junit:junit:4.13.2'
    testCompile 'org.junit.jupiter:junit-jupiter-api:5.7.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
    t2b 'com.gocypher.cybench:cybench-t2b-agent:1.0-SNAPSHOT'
    cybench 'com.gocypher.cybench.client:gocypher-cybench-runner:1.2-SNAPSHOT'
}

test {
//@See: https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html
    // enable JUnit support
//    useJUnit()
    // enable TestNG support (default is JUnit)
//    useTestNG()
    // enable JUnit Platform (a.k.a. JUnit 5) support
    useJUnitPlatform()
}

jar {
//
// This will put all the contents from the jars into a single jar
//    from {
//        configurations.compile.collect {
//            it.isDirectory() ? it : zipTree(it)
//        }
//    }

    exclude 'META-INF/*.SF'
    exclude 'META-INF/*.DSA'
    exclude 'META-INF/*.RSA'

    manifest {
        attributes 'Can-Retransform-Classes': true,
                'Can-Redefine-Classes': true
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = "$group"
            artifactId = "$archivesBaseName"
            version = "$version"

            from components.java
        }
    }
}

// Prints out command line args list for JavaExec tasks
allprojects {
    tasks.withType(JavaExec) {
        doFirst {
            println 'Task [' + name + '] command line tokens: ' + commandLine
        }
    }
}

task buildBenchmarksFromUnitTests(type: JavaExec, dependsOn: testClasses) {
    group = 'CyBench-T2B'
    description = 'Run Test2Benchmarks benchmarks generator'
    classpath = files(
            project.sourceSets.main.runtimeClasspath,
            project.sourceSets.test.runtimeClasspath,
            configurations.t2b
    )
    if (JavaVersion.current().isJava9Compatible()) {
        jvmArgs = [
                "-javaagent: \"${configurations.t2b.iterator().next()}\"",
                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
        ]
    } else {
        jvmArgs = [
                "-javaagent:\"${configurations.t2b.iterator().next()}\""
        ]
    }
    systemProperties = [
            't2b.buildDir': "$buildDir",
            't2b.jdkHome' : 'd:/java/jdk180'
    ]
    main = 'com.gocypher.cybench.Test2Benchmark'
}


task runBenchmarksFromUnitTestsCybench(type: JavaExec, dependsOn: buildBenchmarksFromUnitTests) {
    def benchRunProps = new Properties()
    file(".benchRunProps").withInputStream { benchRunProps.load(it) }

    group = 'CyBench-T2B'
    description = 'Run JMH benchmarks over Cybench Launcher runner'
    classpath = files(
            [benchRunProps.get('RUN_CLASS_PATH').replaceAll("\"", "")],
            configurations.cybench
    )
    if (JavaVersion.current().isJava9Compatible()) {
        jvmArgs = [
                '--add-exports=java.base/jdk.internal.loader=ALL-UNNAMED',
                '--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED'
        ]
    }

    //    ### Config for CyBench Launcher runner ###
    main = 'com.gocypher.cybench.launcher.BenchmarkRunner'
    args = [
            'cfg=t2b/cybench-launcher.properties'
    ]

//    ### Config for JMH runner ###
//    main = 'org.openjdk.jmh.Main'
//    args = [
//            '-f', '1', '-w', '5s', '-wi', '0', '-i', '1', '-r', '5s', '-t', '1', '-bm', 'Throughput'
//    ]
}
